--- a/emitter/package.json
+++ b/emitter/package.json
@@ -4,7 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node $DEBUGGER index.js",
+    "stop": "pkill --signal SIGINT letschat",
+    "test": "mocha ./tests"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^1.10.3",
+    "grunt": "~0.4.5",
+    "grunt-bower": "~0.20.0",
+    "grunt-bower-task": "~0.4.0",
+    "gulp": "^3.9.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-mocha": "^2.2.0",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.3.4",
+    "shortid": "^2.2.4",
+    "debug": "^2.2.0"
   },
   "author": "",
   "license": "ISC"
