--- a/emitter/package.json
+++ b/emitter/package.json
@@ -12,6 +12,8 @@
     "debug": "^2.2.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "debug": "^2.2.0",
     "eslint": "^1.10.3",
     "grunt": "~0.4.5",
     "grunt-bower": "~0.20.0",
@@ -21,9 +23,8 @@
     "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.2.0",
     "istanbul": "^0.4.2",
-    "mocha": "^2.3.4",
-    "shortid": "^2.2.4",
-    "debug": "^2.2.0"
+    "mocha": "^2.5.3",
+    "shortid": "^2.2.4"
   },
   "author": "",
   "license": "ISC"
