--- a/emitter/Dockerfile
+++ b/emitter/Dockerfile
@@ -1,30 +1,24 @@
-FROM alpine:3.10.3
-
-# install node
-RUN apk add --no-cache nodejs tini
+FROM node:10
 
 # set working directory
 WORKDIR /root/emitter
 
 # copy project file
-COPY package.json .
+COPY package*.json ./
 
 # set NODE_ENV
 ENV NODE_ENV production
 
 # install node packages
-RUN npm install && \
-    npm cache clean && \
-    apk del .build-dep && \
-    rm -rf /tmp/*
+RUN npm install
 
 # copy app files
-COPY ./emitter .
+COPY . .
 
 # Set tini as entrypoint
 ENTRYPOINT ["/sbin/tini", "--"]
 
 #application server
-EXPOSE 5000
+EXPOSE 8080
 
-CMD npm run start
+CMD [ "node", "index.js" ]
